# desktop/openapi.json
@@ -271,6 +271,16 @@
               "null"
             ]
           },
+          "recommendation": {
+            "oneOf": [
+              {
+                "$ref": "#/components/schemas/DepartureRecommendationResponse"
+              },
+              {
+                "type": "null"
+              }
+            ]
+          },
           "routeId": {
             "format": "int64",
             "type": "integer"
